--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
         <header>
             <a href="index.html"><img href="../images/logo.png" alt="logo.png"></a>
             <div class="right-header">
-                <a href="profile.html"><img class="hidden" href="images/profile-picture.png" alt="logo.png"></a>
-                <a href="sign-up.html">Sign Up</a>
-                <a href="sign-in.html">Sign In</a>
+                <a href="html/profile.html"><img class="hidden" href="images/profile-picture.png" alt="logo.png"></a>
+                <a href="html/sign-up.html">Sign Up</a>
+                <a href="html/sign-in.html">Sign In</a>
             </div>
         </header>
     </div>
