--- a/html/sign-up.html
+++ b/html/sign-up.html
@@ -6,7 +6,7 @@
     <title>Sign up - Fireside Flurt</title>
     <link rel="icon" type="image/png" href="../images/logo.png">
     <link rel="stylesheet" href="../css/sign-up-in.css">
-    <script type="module" src="sign-up.js" defer></script>
+    <script type="module" src="../js/sign-up.js" defer></script>
 </head>
 <body>
     <div class="wrapper">
