--- a/index.html
+++ b/index.html
@@ -3,20 +3,38 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Find One Now - Cat Chan</title>
-    <link rel="icon" type="image/png" href="../images/logo.png">
-    <link rel="stylesheet" href="../css/index.css">
+    <title>Find One Now - Fireside Flurt</title>
+    <link rel="icon" type="image/png" href="images/logo.png">
+    <link rel="stylesheet" href="css/index.css">
 </head>
 <body>
-    <div class="wrapper">
-        <header>
-            <a href="index.html"><img href="../images/logo.png" alt="logo.png"></a>
-            <div class="right-header">
+    <header>
+        <nav>
+            <a href="index.html"><img src="images/logo.png" alt="logo"></a>
+            <div class="header-right">
                 <a href="html/profile.html"><img class="hidden" href="images/profile-picture.png" alt="logo.png"></a>
                 <a href="html/sign-up.html">Sign Up</a>
                 <a href="html/sign-in.html">Sign In</a>
             </div>
-        </header>
+        </nav>
+    </header>
+    <div class="wrapper">
+        <ul class="track">
+            <li>
+                <h1>User 1</h1>
+                <img src="" alt="profile image">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque explicabo doloribus ipsum repellendus mollitia excepturi, quam voluptates dolore a, nisi cumque consequatur! Temporibus exercitationem esse sed consequatur, dolore obcaecati vero.</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Totam animi voluptatibus possimus quasi. Exercitationem alias odio aspernatur vel, nesciunt quis quibusdam pariatur voluptatum repellat neque, sint totam deleniti iusto consequuntur.</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo natus neque eos accusamus quisquam quos, praesentium blanditiis delectus, suscipit, exercitationem assumenda quis voluptatem ad minus. Obcaecati sint pariatur ratione maxime!</p>
+            </li>
+            <li>
+                <h1>User 1</h1>
+                <img src="" alt="profile image">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque explicabo doloribus ipsum repellendus mollitia excepturi, quam voluptates dolore a, nisi cumque consequatur! Temporibus exercitationem esse sed consequatur, dolore obcaecati vero.</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Totam animi voluptatibus possimus quasi. Exercitationem alias odio aspernatur vel, nesciunt quis quibusdam pariatur voluptatum repellat neque, sint totam deleniti iusto consequuntur.</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo natus neque eos accusamus quisquam quos, praesentium blanditiis delectus, suscipit, exercitationem assumenda quis voluptatem ad minus. Obcaecati sint pariatur ratione maxime!</p>
+            </li>
+        </ul>
     </div>
 </body>
 </html>
