--- a/html/sign-in.html
+++ b/html/sign-in.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sign in - Fireside Flurt</title>
-    <link rel="icon" type="image/png" href="../images/logo.png">
+    <link rel="icon" type="image/png" href="../images/favicon.png">
     <link rel="stylesheet" href="../css/sign-up-in.css">
     <script type="module" src="../js/sign-in.js" defer></script>
 </head>
